code from after meeting with hunger

--- a/src/component/Easy.css
+++ b/src/component/Easy.css
@@ -13,7 +13,7 @@ Body {
 }
 
 
-.navbar-container {
+/* .navbar-container {
     display: grid;
       position: sticky;
       top: 0%;
@@ -41,4 +41,4 @@ Body {
     width: 100%;
     height: 100%;
     text-align: center;
-  }
+  } */
