--- a/src/component/Square.css
+++ b/src/component/Square.css
@@ -2,7 +2,9 @@
     width: 100px;
     height: 100px;
     border: 2px solid grey;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .white {
