--- a/src/component/DisplayGrid.css
+++ b/src/component/DisplayGrid.css
@@ -1,8 +1,12 @@
-.displayGrid {
+.display-grid {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+    /*
     border: 4px solid pink;
     background-color: aqua;
     margin: 20px;
     width: 40px;
-
+    */
 }
