--- a/src/component/Easy.css
+++ b/src/component/Easy.css
@@ -3,13 +3,11 @@ body {
 }
 
 #board-container {
-  width: 500px;
-  height: 700px;
-  margin: 1px;
-
-  /* border: 1px solid black; */
+  width: 100%;
+  height: 100%;
   display: grid;
-  grid-gap: 1px;
+  justify-content: center;
+  grid-gap: 10px;
   grid-template-areas: "square square square square square"
                        "square square square square square"
                        "square square square square square"
