--- a/src/component/Square.css
+++ b/src/component/Square.css
@@ -1,22 +1,24 @@
 .square {
     width: 100px;
     height: 100px;
-    border: 2px solid grey;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: white;
 }
 
 .white {
-    background-color: white;
+    background-color: grey;
 }
 
 .green {
-    background-color: green;
+    background-color: darkgreen;
 }
 
 .yellow {
-    background-color: yellow;
+    background-color: gold;
 }
 
