--- a/src/component/Easy.css
+++ b/src/component/Easy.css
@@ -27,10 +27,13 @@ body {
   grid-area: square;
 }
 
+#board-container > message {
+  grid-area: message;
+}
+
 .game-contents-container {
   width: 100%;
-  height: 100%;
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   gap: 10px;
@@ -47,7 +50,6 @@ body {
 }
 
 .button:active {
-  background-color: #3e8e41;
   box-shadow: 0 5px rgb(29, 29, 29);
   transform: translateY(4px);
 }
