--- a/src/component/InputBox.css
+++ b/src/component/InputBox.css
@@ -1,3 +1,19 @@
 .text {
-    font-size: 20px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+input[type=submit] {
+    border-radius: 8px;
+    background-color: white;
+    height: 30px;
+
+}
+
+input[type=text] {
+    border-radius: 8px;
+    background-color: white;
+    height: 25px;
+
 }
