--- a/src/component/MessageBoard.css
+++ b/src/component/MessageBoard.css
@@ -1,11 +1,8 @@
 .text-container {
-    width: 100%;
-    font-size: 40px;
+    width: 500px;
+    font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    color: white;
-}
-
-.white {
+    justify-content: center;
     color: white;
 }
