--- a/src/component/Easy.css
+++ b/src/component/Easy.css
@@ -3,7 +3,7 @@ body {
   color: white;
 }
 
-#board-container {
+#easy-board-container {
   width: 100%;
   height: 100%;
   display: grid;
@@ -23,12 +23,8 @@ body {
 
 }
 
-#board-container > square {
+#easy-board-container > square {
   grid-area: square;
-}
-
-#board-container > message {
-  grid-area: message;
 }
 
 .game-contents-container {
