--- a/src/component/Hard.css
+++ b/src/component/Hard.css
@@ -1,8 +1,50 @@
-.board-container {
-    width: 500px;
-    height: 700px;
-    margin: 1px;
+body {
+    background-color: white(0, 0, 0, 0.856);
+    color: white;
+  }
+  
+  #hard-board-container {
+    width: 100%;
+    height: 100%;
     display: grid;
+    justify-content: center;
+    grid-gap: 10px;
+    margin-top: 5%;
+    grid-template-areas: "square square square square square square square"
+                         "square square square square square square square"
+                         "square square square square square square square"
+                         "square square square square square square square"
+                         "square square square square square square square";
     grid-template-columns: 100px 100px 100px 100px 100px 100px 100px;
-    grid-row: 100px 100px 100px 100px 100px;
-}
+    grid-template-rows: 100px 100px 100px 100px 100px;
+  
+  
+  }
+  
+  #hard-board-container > square {
+    grid-area: square;
+  }
+
+  
+  .game-contents-container {
+    width: 100%;
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .button-style {
+    color: black;
+    font-size: 25px;
+    border-radius: 12px;
+    cursor: pointer;
+    box-shadow: 0 2px #999;
+    background-color: white;
+  
+  }
+  
+  .button:active {
+    box-shadow: 0 5px rgb(29, 29, 29);
+    transform: translateY(4px);
+  }
