--- a/src/component/App.css
+++ b/src/component/App.css
@@ -28,9 +28,29 @@ body {
   "square square square square square square square "
   "square square square square square square square "
   "square square square square square square square ";
-  grid-template-columns:  70px 70px 70px 70px 70px 70px 70px;
-  grid-template-rows: 70px  70px  70px  70px  70px  70px;}
+  grid-template-columns:  60px 60px 60px 60px 60px 60px 60px;
+  grid-template-rows: 60px  60px  60px  60px  60px  60px;}
 
 #wel-board-container > square {
   grid-area: square;
+}
+
+
+@media (max-width: 450px){
+   
+  .header-text {
+    font-size: 75px;
+  }
+     
+  #wel-board-container {
+    grid-gap: 7px;
+    grid-template-areas: "square square square square square square square"
+                       "square square square square square square square"
+                       "square square square square square square square"
+                       "square square square square square square square"
+                       "square square square square square square square"
+                       "square square square square square square square";
+    grid-template-columns: 40px 40px 40px 40px 40px 40px 40px;
+    grid-template-rows: 40px 40px 40px 40px 40px 40px;
+  }
 }
