--- a/src/component/Easy.css
+++ b/src/component/Easy.css
@@ -18,8 +18,8 @@ body {
                        "square square square square square"
                        "square square square square square"
                        "square square square square square";
-  grid-template-columns: 70px 70px 70px 70px 70px;
-  grid-template-rows: 70px 70px 70px 70px 70px 70px 70px;
+  grid-template-columns: 60px 60px 60px 60px 60px;
+  grid-template-rows: 60px 60px 60px 60px 60px 60px 60px;
 }
 
 #easy-board-container > square {
@@ -51,4 +51,25 @@ body {
 
 h1 {
   text-align: center;
+}
+
+@media (max-width: 450px){
+   
+  .button-style {
+    font-size: 15px;
+    border-radius: 8px;
+  }
+     
+  #easy-board-container {
+    grid-gap: 7px;
+    grid-template-areas: "square square square square square "
+                       "square square square square square"
+                       "square square square square square"
+                       "square square square square square"
+                       "square square square square square"
+                       "square square square square square"
+                       "square square square square square";
+    grid-template-columns: 40px 40px 40px 40px 40px;
+    grid-template-rows: 40px 40px 40px 40px 40px 40px 40px;
+  }
 }
