--- a/src/component/MessageBoard.css
+++ b/src/component/MessageBoard.css
@@ -1,7 +1,15 @@
 .text-container {
-    width: 385px;
+    width: 335px;
     font-size: 15px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     color: white;
+}
+
+@media (max-width: 450px){
+    .text-container {
+        width: 235px;
+        font-size: 10px;
+    }
+
 }
